--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-.history/README_20230508225954.md
-.history/.gitignore_20230508230222
-.history/.gitignore_20230508230223
-.history/README_20230508230151.md
-.history/.gitignore_20230508230240
+.history
